--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -12,7 +12,7 @@
             <li><img src="../../img/logo.png"></li>
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../Doctor/docindex.html">Doctors</a></li>
-            <li><a href="/about">About Us</a></li>
+            <li><a href="../Home/About.html">About Us</a></li>
         </ul>
     </nav>
     <main>
@@ -36,14 +36,6 @@
                         <div class="col-md-10">
                             <input type="password" id="Password" name="Password" class="form-control" />
                             <span class="field-validation-valid" data-valmsg-for="Password" data-valmsg-replace="true"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <div class="checkbox">
-                                <input type="checkbox" id="RememberMe" name="RememberMe" value="true" />
-                                <label for="RememberMe">Remember Me</label>
-                            </div>
                         </div>
                     </div>
                     <div class="form-group">
