--- a/Views/Account/Myaccount.html
+++ b/Views/Account/Myaccount.html
@@ -12,10 +12,11 @@
     <nav>
         <ul>
             <li><img src="../../img/logo.png"></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Views/Doctor/docindex.html">Doctors</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../../Views/Doctor/docindex.html">Doctors</a></li>
             <li><a href="../Home/About.html">About Us</a></li>
             <li><a href="#contact-section">Contact Us</a></li>
+            <li><a href="../../index.html">Logout</a></li>
         </ul>
     </nav>
     <div class="jumbotron">
